# discord-tui

./: Cargo.toml
src/: main.rs
src/ui/: mod.rs
