[package]
name = "discord-tui"
version = "0.1.0"
authors = ["Hendrik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.9.5", features = ["crossterm"], default-features = false }
crossterm = "0.17"
